==> ARMmbed/mbed-os/usb/device/targets/TARGET_GigaDevice/USBPhy_GD32.cpp <==
#define USBGD_HAL_UNSUPPORTED
#define USBGD_HAL_UNSUPPORTED
#include "USBPhyHw.h"
#include "pinmap.h"
#include "drv_usbd_int.h"
#define EP_TO_LOG(ep)       ((ep) & 0x7F)
#define EP_TO_IDX(ep)       (((ep) << 1) | ((ep) & 0x80 ? 1 : 0))
#define LOG_IN_TO_EP(ep)    ((ep) | 0x80)
#define LOG_OUT_TO_EP(ep)   ((ep) | 0x00)
#define IDX_TO_EP(ep)       (((ep) >> 1)|((ep) & 1) << 7)
#define NUM_ENDPOINTS           4
#define MAX_PACKET_NON_ISO      64
#define MAX_PACKET_ISO          (256 + 128)     // Spec can go up to 1023, only ram for this though
#define ENDPOINT_NON_ISO        (USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT)

void USBPhyHw::init(USBPhyEvents *events)
{
    uint32_t total_bytes = 0;

    NVIC_DisableIRQ(USBHAL_IRQn);

    if (this->events == NULL) {
        sleep_manager_lock_deep_sleep();
    }
    this->events = events;
    sof_enabled = false;
    memset(epComplete, 0, sizeof(epComplete));
    memset(&hpcd.bp, 0, sizeof(hpcd.bp));


    hpcd.bp.core_enum = USB_CORE_ENUM_FS;
    hpcd.bp.phy_itf = USB_EMBEDDED_PHY;
    hpcd.bp.sof_enable = 0;
    hpcd.bp.core_speed = USB_SPEED_FULL;
    hpcd.bp.num_ep = NB_ENDPOINT;
    hpcd.bp.transfer_mode = USB_USE_FIFO;

    // Pass instance for usage inside call back
    instance = this;

#ifdef GD32F450
    // Configure USB pins and other clocks
    rcu_periph_clock_enable(RCU_GPIOA);
    rcu_periph_clock_enable(RCU_SYSCFG);

    pin_function(USBFS_DM, SET_PIN_FUNCTION(PIN_MODE_AF, PIN_OTYPE_PP, PIN_PUPD_NONE, PIN_AF_10)); // DM
    pin_function(USBFS_DP, SET_PIN_FUNCTION(PIN_MODE_AF, PIN_OTYPE_PP, PIN_PUPD_NONE, PIN_AF_10)); // DP

    rcu_pll48m_clock_config(RCU_PLL48MSRC_PLLQ);

    rcu_ck48m_clock_config(RCU_CK48MSRC_PLL48M);

#else
    rcu_usb_clock_config(RCU_CKUSB_CKPLL_DIV2_5);
#endif

    rcu_periph_clock_enable(RCU_USBFS);

    // Configure PCD and FIFOs
    hpcd.pData = (void*)this;

    /* configure USB capabilites */
    usb_basic_init (hpcd.bp, &hpcd.regs);

    /* initailizes the USB core*/
    usb_core_init (hpcd.bp, &hpcd.regs);

    /* initailizes device mode */
    usb_devcore_init (&hpcd);

    usb_dev_disconnect(&hpcd);

    /* Reserve space in the RX buffer for:
     * - 1 isochonous packet
     * - 2 max sized non-isochonous packets
     * - setup buffer - 10 words as specified by Reference Manual
     * - global nak out - 1 words as specified by Reference Manual
     */
    uint32_t fifo_size = (MAX_PACKET_ISO + 4) + (MAX_PACKET_NON_ISO + 4) * 2 + (10 * 4) + (1 * 4);

    usb_set_rxfifo(&hpcd.regs, (fifo_size / 4));
    total_bytes += fifo_size;

    /* Reserve Tx space up front */
    for (int i = 0; i < NUM_ENDPOINTS; i++) {
        fifo_size = tx_ep_sizes[i] + 4;
        usb_set_txfifo(&hpcd.regs, i, fifo_size / 4);
        total_bytes += fifo_size;
    }

    /* flush all Tx FIFOs */
    usb_txfifo_flush (&hpcd.regs, 0x10);

    /* flush entire Rx FIFO */
    usb_rxfifo_flush (&hpcd.regs);

    /* 1.25 kbytes */
    MBED_ASSERT(total_bytes <= 1280);

    // Configure interrupt vector
    NVIC_SetVector(USBHAL_IRQn, (uint32_t)&_usbisr);
    NVIC_SetPriority(USBHAL_IRQn, 1);
    NVIC_EnableIRQ(USBHAL_IRQn);
}

bool USBPhyHw::endpoint_add(usb_ep_t endpoint, uint32_t max_packet, usb_ep_type_t type)
{
    uint32_t len;

    /*
     * Endpoints are configured in init since re-configuring
     * fifos when endpoints are added or removed causes tests to fail.
     */
    if (endpoint & 0x80) {
        len = USBD_PCDEx_GetTxFiFo(&hpcd, endpoint & 0x7f);

        MBED_ASSERT(len >= max_packet);
    }

    uint32_t ret = usbd_ep_setup(&hpcd, endpoint, max_packet, type);

    MBED_ASSERT(ret == 0U);

    return (ret == 0U) ? true : false;
}
